# Brewsic

./: .gitignore  CMakeLists.txt  PATTERNS  TODO  WIP  factory.h  main.cpp  maintest.cpp  maintest.h  makefile
common/: Iobserver.h  pointers.h  property.h  propertylinker.h  propertyobserver.h  propertytest.h  signals.h
filters/: Ifilter.h  adsr.cpp  adsr.h  delay.cpp  delay.h  flanger.cpp  flanger.h  gate.cpp  gate.h  volume.h
generators/: Igenerator.h  generatorfactory.cpp  generatorfactory.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h
gui/: Icontrol.cpp  Icontrol.h  Iwithgui.h  background.cpp  background.h  button.cpp  button.h  checkbox.cpp  checkbox.h  fonts.cpp  fonts.h  frame.cpp  frame.h  guimgr.cpp  guimgr.h  image.cpp  image.h  keyboard.cpp  keyboard.h  label.cpp  label.h  matrix.cpp  matrix.h  pianoroll.h  pselect.cpp  pselect.h  slider.cpp  slider.h  style.cpp  style.h  wheel.cpp  wheel.h  window.cpp  window.h
gui/filters/: delaygui.cpp  delaygui.h
gui/mixer/: mixer.cpp  mixer.h
gui/song/: patterngui.cpp  patterngui.h
gui/synths/: triosc.cpp  triosc.h
mixer/: filterqueue.cpp  filterqueue.h  mainmixer.cpp  mainmixer.h  mixer.cpp  mixer.h  synthqueue.cpp  synthqueue.h
song/: eventqueue.cpp  eventqueue.h  note.h  noteevent.h  pattern.cpp  pattern.h  patternmanager.cpp  patternmanager.h  songcontrol.cpp  songcontrol.h
synths/: Isynth.cpp  Isynth.h  synthfactory.cpp  synthfactory.h  triosc.cpp  triosc.h  trioscobserver.cpp  trioscobserver.h
